2025-08-29T01:18:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17311980385 # 750
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-29
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 1074 1554 / 1090 1570
* notice: next accum: outdated-unq outdated-all / unq all: 1077 1557 / 1090 1570
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-14 2025-08-15] / []

2025-08-28T01:17:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17282928162 # 749
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-28
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 1072 1552 / 1089 1569
* notice: next accum: outdated-unq outdated-all / unq all: 1074 1554 / 1090 1570
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-13] / [2025-08-14 2025-08-28]

2025-08-27T01:18:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17254605289 # 748
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-27
* notice: last 14d: unq all: 5 16
* notice: prev accum: outdated-unq outdated-all / unq all: 1072 1552 / 1088 1568
* notice: next accum: outdated-unq outdated-all / unq all: 1072 1552 / 1089 1569
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-13 2025-08-27]

2025-08-26T01:20:55Z: