@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-29T01:18:02Z",
-  "count_outdated" : 1557,
-  "uniques_outdated" : 1077,
+  "timestamp" : "2025-08-30T01:14:17Z",
+  "count_outdated" : 1558,
+  "uniques_outdated" : 1078,
   "count" : 1570,
   "uniques" : 1090,
   "clones" : [
-    {
-      "timestamp": "2025-08-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-17T00:00:00Z",
       "count": 1,
