@@ -1,3 +1,12 @@
+2025-08-30T01:14:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17337474291 # 751
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-30
+* notice: last 14d: unq all: 3 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 1077 1557 / 1090 1570
+* notice: next accum: outdated-unq outdated-all / unq all: 1078 1558 / 1090 1570
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-08-16] / []
+
 2025-08-29T01:18:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17311980385 # 750
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-29
